# MarioCloneOpenGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  Game.cpp  Logger.cpp  Logger.h  Mario.cpp  Mario.h  MarioCloneGL.cpp  MarioCloneGL.sln  MarioCloneGL.vcxproj  MarioCloneGL.vcxproj.filters  README.md  ResourceManager.cpp  Shader.cpp  main.cpp
.github/workflows/: c-cpp.yml
Dependencies/Box2D/lib/: box2d.lib
Resources/Levels/: 1.level
Resources/Shaders/: box-debug.frag.glsl  box-debug.vert.glsl  sprite.frag.glsl  sprite.vert.glsl
includes/: Game.h  GameObject.h  ResourceManager.h  Shader.h
includes/Characters/: Mario.h  Mushroom.h  Owl.h
includes/Collision/: CharacterContactListener.h
includes/Core/: Box2DRenderer.h  EnemyManager.h  GameScene.h  Renderer.h  TextRenderer.h  Texture.h
includes/Input/: Camera.h  Input.h
includes/World/: Ground.h  LevelManager.h
src/: Game.cpp  Logger.cpp  MarioCloneGL.cpp  ResourceManager.cpp  Shader.cpp  glad.c
src/Characters/: Mario.cpp  Mushroom.cpp  Owl.cpp
src/Collision/: CharacterContactListener.cpp
src/Core/: Box2DRenderer.cpp  EnemyManager.cpp  GameScene.cpp  Renderer.cpp  TextRenderer.cpp  Texture.cpp
src/Input/: Camera.cpp  Input.cpp
src/World/: Ground.cpp  LevelManager.cpp
